[project]
name = "artistic-style-transfer"
version = "0.1.0"
description = ""
authors = [
    {name = "szolkiewicz",email = "s.d.zolkiewicz@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
packages = [{include = "artistic_style_transfer", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
