[project]
name = "artistic-style-transfer"
version = "0.1.0"
description = ""
authors = [
    {name = "szolkiewicz",email = "s.d.zolkiewicz@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "tensorflow (>=2.19.0,<3.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)"
]

[tool.poetry]
packages = [{include = "artistic_style_transfer", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
